--- a/inventaris/pubspec.yaml
+++ b/inventaris/pubspec.yaml
@@ -16,15 +16,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.17.5
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.18.0
   cloud_firestore: ^4.15.5
   google_fonts: ^6.1.0
   provider: ^6.1.1
   intl: ^0.18.1
   pdf: ^3.10.8
   printing: ^5.12.0
-  flutter_datatime_picker_plus: ^2.0.1
+  flutter_datetime_picker_plus: ^2.0.1
   fluttertoast: ^8.2.4
 
 
@@ -35,13 +35,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    flutter_lints: ^3.0.1
-
- 
-  flutter_lints: ^5.0.0
 
 
 flutter:
+  assets:
+  - assets/images/logo.jpg
+
 
   
   uses-material-design: true
